# ODB2kicad

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  DEPENDENCY_ANALYSIS.md  PORTING_CPP_TO_WASM_GUIDE.md  PRD-wasm.md  PRD.md  README.md  progress.txt  ralph.sh  serve-local.mjs  what-doesnt-work.md
.claude/: settings.local.json
emscripten-test/: test-node.mjs  test.cpp
kicad-drc-wasm/: .gitignore  CMakeLists.txt  CMakeLists.wasm.txt
kicad-drc-wasm/include/: kicad_drc_api.h
kicad-drc-wasm/platform/: kiplatform_wasm.cpp  pgm_base_wasm.cpp  wx_stubs.cpp
kicad-drc-wasm/src/: api.cpp  diag_main.cpp  linker_stubs.cpp  minimal_test.cpp  pcb_io_mgr_wasm.cpp
kicad-drc-wasm/stubs/: Python.h  Standard_Version.hxx  ft2build.h  git2.h  zstd.h
kicad-drc-wasm/stubs/api/board/: board.pb.h  board_types.pb.h
kicad-drc-wasm/stubs/api/common/: envelope.pb.h
kicad-drc-wasm/stubs/api/common/commands/: editor_commands.pb.h
kicad-drc-wasm/stubs/api/common/types/: base_types.pb.h  enums.pb.h  project_settings.pb.h
kicad-drc-wasm/stubs/curl/: curl.h
kicad-drc-wasm/stubs/fontconfig/: fontconfig.h
kicad-drc-wasm/stubs/freetype2/: freetype.h  ft2build.h  ftbbox.h  tttables.h
kicad-drc-wasm/stubs/google/protobuf/: any.pb.h  empty.pb.h  field_mask.pb.h  generated_enum_reflection.h  message.h  port_def.inc  port_undef.inc
kicad-drc-wasm/stubs/harfbuzz/: hb-ft.h  hb.h
kicad-drc-wasm/stubs/ngspice/: sharedspice.h
kicad-drc-wasm/stubs/pybind11/: pybind11.h
kicad-drc-wasm/stubs/wx/: any.h  app.h  arrstr.h  base64.h  bitmap.h  bmpbndl.h  brush.h  buffer.h  busycursor.h  button.h  calctrl.h  checkbox.h  choice.h  clipbrd.h  cmdline.h  colour.h  combobox.h  config.h  control.h  crt.h  cursor.h  dataview.h  datetime.h  dc.h  debug.h  defs.h  dialog.h  dir.h  dirdlg.h  dynlib.h  event.h  ffile.h  file.h  fileconf.h  filedlg.h  filefn.h  filename.h  font.h  fontenc.h  frame.h  (+74 more)
kicad-drc-wasm/stubs/wx/aui/: aui.h  auibar.h  framemanager.h
kicad-drc-wasm/stubs/wx/html/: htmlcell.h  htmlwin.h  m_templ.h  styleparams.h
kicad-drc-wasm/stubs/wx/propgrid/: property.h  propgrid.h
kicad-drc-wasm/stubs/wx/richtext/: richtextctrl.h
kicad-drc-wasm/stubs/wx/stc/: stc.h
kicad-drc-wasm/stubs/wx/xml/: xml.h
kicad-drc-wasm/test/: test-wasm-5g.mjs  test-wasm-assert.mjs  test-wasm-assert2.mjs  test-wasm-debug.mjs  test-wasm-debug2.mjs  test-wasm-debug3.mjs  test-wasm-debug4.mjs  test-wasm-debug5.mjs  test-wasm-debug6.mjs  test-wasm-diag.mjs  test-wasm-except.mjs  test-wasm-init.mjs  test-wasm-trace.mjs  test-wasm.mjs  test_drc.cpp
kicad-drc-wasm/wasm-build/: CMakeLists.txt
odb2kicad/: CMakeLists.txt  PRD.md  progress.txt  what-doesnt-work.md
odb2kicad/src/: main.cpp  odb2kicad_lib.cpp  odb2kicad_lib.h  wasm_bindings.cpp
odb2kicad/src/model/: kicad_pcb.h  odb_design.h
odb2kicad/src/odb_parser/: components_parser.cpp  components_parser.h  eda_parser.cpp  eda_parser.h  features_parser.cpp  features_parser.h  info_parser.cpp  info_parser.h  matrix_parser.cpp  matrix_parser.h  netlist_parser.cpp  netlist_parser.h  odb_parser.cpp  odb_parser.h  profile_parser.cpp  profile_parser.h  stephdr_parser.cpp  stephdr_parser.h  symbols.cpp  symbols.h
odb2kicad/src/util/: coord.h  string_utils.cpp  string_utils.h
odb2kicad/src/writer/: kicad_writer.cpp  kicad_writer.h
odb2kicad/test/: test-wasm-parity.mjs  test-wasm-smoke.sh  test-wasm.mjs  test_simple.sh
public/: coi-serviceworker.js  index.html  kicad_drc.mjs  sample.kicad_pcb
samples/: test-odb.tgz  test.kicad_pcb
samples/odb-kitchen-sink/matrix/: matrix
samples/odb-kitchen-sink/misc/: info
samples/odb-kitchen-sink/steps/pcb/: profile
samples/odb-kitchen-sink/steps/pcb/eda/: data
samples/odb-output/matrix/: matrix
samples/odb-output/misc/: info
samples/odb-output/steps/pcb/: profile
samples/odb-output/steps/pcb/eda/: data
samples/rigidflex-odb/designodb_rigidflex/misc/: .attrlist.sum  .data.idf.sum  .metadata.xml.sum  sysattr.test  wizard.state.xml
samples/rigidflex-odb/designodb_rigidflex/symbols/sc_join0201_hd/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/sc_join0201_hd_sm/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/sc_join0201_hd_sm_50um/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/sc_join0201w_hd/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/sc_join0201w_hd_sm/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/sc_join0201w_hd_sm_50um/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special0.300x0.330/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special0.440x0.560/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special0.440x0.560wide/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special0.500x0.800_sm/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special0.510x0.560/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special0.540x0.660/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special0.540x0.660wide/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special0.560x0.680/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special0.584x0.900x2/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special0.770x0.840/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special1.000x1.000/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special1.100x1.100/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special1.120x1.120/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special1.150x1.650/: .features.sum
samples/rigidflex-odb/designodb_rigidflex/symbols/special1.250x1.750/: .features.sum
wasm/: odb2kicad-wasm.tgz  package-lock.json  package.json
wasm/demo/: .gitignore  index.html
wasm/scripts/: build.mjs
wasm/src/: index.d.ts  index.mjs
wasm/test/: browser.html  test-node.mjs
(+223 files in other folders)
